--- a/composer.json
+++ b/composer.json
@@ -1,29 +1,37 @@
 {
-    "name": "tndjxd/xero-manager",
-    "description": "A Laravel Nova tool.",
-    "keywords": [
-        "laravel",
-        "nova"
-    ],
-    "license": "MIT",
-    "require": {
-        "php": "^7.3|^8.0"
-    },
-    "autoload": {
-        "psr-4": {
-            "Tndjxd\\XeroManager\\": "src/"
-        }
-    },
-    "extra": {
-        "laravel": {
-            "providers": [
-                "Tndjxd\\XeroManager\\XeroManagerServiceProvider"
-            ]
-        }
-    },
-    "config": {
-        "sort-packages": true
-    },
-    "minimum-stability": "dev",
-    "prefer-stable": true
+  "name": "tndjx/xero-manager",
+  "description": "A Laravel Nova tool.",
+  "keywords": [
+    "laravel",
+    "nova"
+  ],
+  "license": "MIT",
+  "repositories": [
+    {
+      "type": "composer",
+      "url": "https://nova.laravel.com"
+    }
+  ],
+  "require": {
+    "php": "^7.3|^8.0",
+    "laravel/nova": "~4.0",
+    "webfox/laravel-xero-oauth2": "^4.1"
+  },
+  "autoload": {
+    "psr-4": {
+      "Tndjx\\XeroManager\\": "src/"
+    }
+  },
+  "extra": {
+    "laravel": {
+      "providers": [
+        "Tndjx\\XeroManager\\XeroManagerServiceProvider"
+      ]
+    }
+  },
+  "config": {
+    "sort-packages": true
+  },
+  "minimum-stability": "dev",
+  "prefer-stable": true
 }
